@@ -25,10 +25,9 @@
 #  - python_install Install python package [and its documentation]
 #
 # R wrapper:
-#  - r_doc          Build R package documentation [optional] [TODO]
+#  - r_doc          Build R package documentation [optional]
 #  - r_build        Build R wrapper [and its documentation]
 #  - r_install      Install R package [and its documentation]
-#  - r_upload       Build R package distribution and upload to CRAN-like [and its documentation] [TODO]
 #
 # Non-regression tests:
 #  - build_tests    Build non-regression tests C++ executables
@@ -132,6 +131,9 @@ cmake-doxygen:
 cmake-python-doxygen:
 	@cmake -B$(BUILD_DIR) -H. $(GENERATOR) $(CMAKE_DEFINES) -DBUILD_PYTHON=ON -DBUILD_DOXYGEN=ON
 
+cmake-r-doxygen:
+	@cmake -B$(BUILD_DIR) -H. $(GENERATOR) $(CMAKE_DEFINES) -DBUILD_R=ON -DBUILD_DOXYGEN=ON
+
 print_version: cmake
 	@cmake --build $(BUILD_DIR) --target print_version -- --no-print-directory
 
@@ -163,24 +165,21 @@ python_doc: cmake-python-doxygen
 python_build: cmake-python
 	@cmake --build $(BUILD_DIR) --target python_build -- --no-print-directory $(N_PROC_OPT)
 
-python_install: python_build
+python_install: cmake-python
 	@cmake --build $(BUILD_DIR) --target python_install -- --no-print-directory $(N_PROC_OPT)
 
 
 
-.PHONY: r_doc r_build r_install r_upload
+.PHONY: r_doc r_build r_install
 
-r_doc: cmake-r doxygen
-	@echo "Target r_doc not yet implemented"
+r_doc: cmake-r-doxygen
+	@cmake --build $(BUILD_DIR) --target r_doc -- --no-print-directory $(N_PROC_OPT)
 
-r_build: cmake-r
+r_build: cmake-r-doxygen
 	@cmake --build $(BUILD_DIR) --target r_build -- --no-print-directory $(N_PROC_OPT)
 
-r_install: r_build
+r_install: cmake-r-doxygen
 	@cmake --build $(BUILD_DIR) --target r_install -- --no-print-directory $(N_PROC_OPT)
-
-r_upload: r_build
-	@echo "Target r_upload not yet implemented"
 
 
 
@@ -195,7 +194,7 @@ check_cpp: cmake
 check_py: cmake-python
 	@CTEST_OUTPUT_ON_FAILURE=1 cmake --build $(BUILD_DIR) --target check_py -- --no-print-directory $(N_PROC_OPT)
 
-check_r: cmake-r
+check_r: cmake-r-doxygen
 	@CTEST_OUTPUT_ON_FAILURE=1 cmake --build $(BUILD_DIR) --target check_r -- --no-print-directory $(N_PROC_OPT)
 
 check: cmake-python-r
@@ -204,7 +203,7 @@ check: cmake-python-r
 check_ipynb: cmake-python
 	@CTEST_OUTPUT_ON_FAILURE=1 cmake --build $(BUILD_DIR) --target check_ipynb -- --no-print-directory $(N_PROC_OPT)
 
-check_rmd: cmake-r
+check_rmd: cmake-r-doxygen
 	@CTEST_OUTPUT_ON_FAILURE=1 cmake --build $(BUILD_DIR) --target check_rmd -- --no-print-directory $(N_PROC_OPT)
 
 check_test_cpp: cmake
@@ -213,7 +212,7 @@ check_test_cpp: cmake
 check_test_py: cmake-python
 	@cd $(BUILD_DIR); make prepare_check_py; CTEST_OUTPUT_ON_FAILURE=1 ctest -R $(TEST)
 
-check_test_r: cmake-r
+check_test_r: cmake-r-doxygen
 	@cd $(BUILD_DIR); make prepare_check_r; CTEST_OUTPUT_ON_FAILURE=1 ctest -R $(TEST)
 
 build_demos: cmake-python-r
