@@ -1,0 +1,3 @@
+# Generate documentation (Rd files) from R scripts
+devtools::document(".")
+
