@@ -15,6 +15,6 @@
 function(libname, pkgname)
 {
 	pos = match(paste0("package:", pkgname), search())
-	OptDbg_reset()
+	#OptDbg_reset() # Remove this as it is obvious and it makes roxygen crashing
 	plot.initialize(pos)
 }
